# QualiWatchPc

./: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
src/: App.tsx  index.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: main.rs
src/components/: AppBar.tsx
src/contexts/: TemaContext.tsx
src/interfaces/Produtos/: CreateProduto.ts  ReadProduto.ts  ReadProdutoApi.ts
src/screens/Alertas/: index.tsx
src/screens/Alertas/Components/: Header.tsx  Tabela.tsx
src/screens/Configuracao/: index.tsx
src/screens/Estatisticas/: index.tsx
src/screens/Estatisticas/components/: BarGraph.tsx  Header.tsx  Opcoes.tsx
src/screens/Products/: index.tsx
src/screens/Products/components/: EscolhedorDeIconeValidade.tsx  Header.tsx  Produto.tsx
src/screens/Products/pages/Adicionar/: index.tsx
src/screens/Products/pages/AdicionarEditar/: index.tsx
src/screens/Products/pages/Editar/: index.tsx
src/screens/Products/pages/components/: Header.tsx  ProdutoForm.tsx
src/services/: Produto.ts  Validade.ts
