[package]
name = "QualiWatchPc"
version = "0.1.0"
description = "A Tauri App"
authors = ["Aldaris"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
polars = {version ="0.40.0", features= ["lazy", "temporal", "dynamic_group_by"] }
chrono = "0.4.38"
tauri-plugin-dialog = "2.0.0-beta.9"
tauri-plugin-http = "2.0.0-beta.10"
tauri-plugin-shell = "2.0.0-beta.7"
tauri-plugin-store = "2.0.0-beta.8"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
