cargo-features = ["profile-rustflags", "trim-paths"]

[package]
name = "QualiWatchPc"
version = "0.1.0"
description = "A Tauri App"
authors = ["Aldaris"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
polars = {version ="0.40.0", features= ["lazy", "temporal", "dynamic_group_by"] }
tauri-plugin-dialog = "2.0.0-beta.9"
tauri-plugin-http = "2.0.0-beta.10"
tauri-plugin-shell = "2.0.0-beta.7"
tauri-plugin-store = "2.0.0-beta.8"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
incremental = true # Compile your binary in smaller steps.
rustflags = ["-Zthreads=8"] # Better compile performance.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
trim-paths = "all" # Removes potentially privileged information from your binaries.
rustflags = ["-Cdebuginfo=0", "-Zthreads=8"] # Better compile performance.
